# prepropy

./: CONTRIBUTING.rst  CONTRIBUTOR.md  LICENSE  README.md  pyproject.toml  team_contract.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  prepropy.rst
prepropy/: eda.py  imputation.py  prepropy.py  scaler.py
tests/: test_eda.py  test_imputation.py  test_prepropy.py  test_scaler.py
