[tool.poetry]
name = "prepropy"
version = "0.1.0"
description = "A python package for data preprocessing"
authors = ["Chun Chieh Chang, Bruhat Musunuru, Pan Fan"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
