[tool.poetry]
name = "prepropy"
version = "0.1.4"
description = "A python package for data preprocessing"
authors = ["Chun Chieh Chang, Bruhat Musunuru, Pan Fan"]
license = "\"MIT\""

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
altair = "^4.1.0"
vega-datasets = "^0.9.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-semantic-release = "^7.15.0"
codecov = "^2.1.11"
flake8 = "^3.8.4"
Sphinx = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"

[tool.semantic_release]
version_variable = "prepropy/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

